--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "web:start": "yarn nodemon -x \"yarn nx serve || shx touch apps/web/next.config.js\" -e '' -w 'apps/web/next.config.js'",
     "start:linux": "yarn dev:linux",
     "start:windows": "yarn dev:windows",
-    "dev": "concurrently -m 16 --kill-others-on-fail -n GRAPHQL-CODEGEN,HASURA,PRISMA,HASURA-METADATA,WEB,WEB-PRELOADER,LAUNCH-BROWSER,BACKEND -c yellow,red,green,grey,blue,grey,grey,magenta \"yarn graphql-codegen:watch\" \"yarn hasura:start\" \"yarn bridge:start\" \"wait-on -w 1200 http-get://localhost:4000 && echo BRIDGE NOW ALIVE && wait-on -w 1200 http-get://localhost:8080/console && echo HASURA AND BRIDGE ALIVE && yarn hasura:cli metadata reload && yarn hasura:cli console\" \"yarn web:start\" \"wait-on tcp:4000 && wait-on -w 1200 http-get://localhost:8080/console && wait-on http://localhost:4200 && open-cli \\\"http://web.localhost:4200\\\"\" \"wait-on http://localhost:4200\" \"yarn nx serve backend\"",
+    "dev": "concurrently -m 16 --kill-others-on-fail -n GRAPHQL-CODEGEN,HASURA,PRISMA,HASURA-METADATA,WEB,WEB-PRELOADER,LAUNCH-BROWSER,BACKEND -c yellow,red,green,grey,blue,grey,grey,magenta \"yarn graphql-codegen:watch\" \"yarn hasura:start\" \"yarn bridge:start\" \"wait-on -w 1200 http-get://localhost:4000 && echo BRIDGE NOW ALIVE && wait-on -w 1200 http-get://localhost:8080/console && echo HASURA AND BRIDGE ALIVE && yarn hasura:cli metadata reload && yarn hasura:refresh-metadata && yarn hasura:cli console\" \"yarn web:start\" \"wait-on tcp:4000 && wait-on -w 1200 http-get://localhost:8080/console && wait-on http://localhost:4200 && open-cli \\\"http://web.localhost:4200\\\"\" \"wait-on http://localhost:4200\" \"yarn nx serve backend\"",
     "dev:light": "concurrently \"nx serve web\" \"nx serve bridge-api\"",
     "dev:windows": "echo DEPRICATED - Just call 'dev' from now && yarn dev",
     "dev:linux": "echo DEPRICATED - Just call 'dev' from now && yarn dev",
@@ -217,18 +217,18 @@
     "@nrwl/nest": "12.0.8",
     "@nrwl/next": "12.0.8",
     "@nrwl/node": "12.0.8",
-    "@nrwl/react": "12.0.8",
-    "@nrwl/react-native": "11.4.1",
-    "@nrwl/storybook": "12.3.4",
+    "@nrwl/react": "12.5.1",
+    "@nrwl/react-native": "12.3.6",
+    "@nrwl/storybook": "12.5.1",
     "@nrwl/tao": "12.0.8",
     "@nrwl/web": "12.0.8",
     "@nrwl/workspace": "12.0.8",
     "@react-native-community/cli-platform-android": "4.13.0",
     "@react-native-community/cli-platform-ios": "4.13.0",
-    "@storybook/addon-a11y": "6.1.21",
-    "@storybook/addon-essentials": "6.1.21",
-    "@storybook/addon-storysource": "6.1.21",
-    "@storybook/react": "6.1.21",
+    "@storybook/addon-a11y": "6.3.2",
+    "@storybook/addon-essentials": "6.3.2",
+    "@storybook/addon-storysource": "6.3.2",
+    "@storybook/react": "6.3.2",
     "@testing-library/jest-native": "4.0.1",
     "@testing-library/react": "11.2.6",
     "@testing-library/react-native": "7.2.0",
