--- a/package.json
+++ b/package.json
@@ -209,20 +209,20 @@
     "@nestjs/cli": "7.5.6",
     "@nestjs/schematics": "7.3.0",
     "@nestjs/testing": "7.6.15",
-    "@nrwl/cli": "12.0.8",
-    "@nrwl/cypress": "12.0.8",
-    "@nrwl/eslint-plugin-nx": "12.0.8",
-    "@nrwl/jest": "12.0.8",
-    "@nrwl/linter": "12.0.8",
-    "@nrwl/nest": "12.0.8",
-    "@nrwl/next": "12.0.8",
-    "@nrwl/node": "12.0.8",
-    "@nrwl/react": "12.5.1",
+    "@nrwl/cli": "12.5.2",
+    "@nrwl/cypress": "12.5.2",
+    "@nrwl/eslint-plugin-nx": "12.5.2",
+    "@nrwl/jest": "12.5.2",
+    "@nrwl/linter": "12.5.2",
+    "@nrwl/nest": "12.5.2",
+    "@nrwl/next": "12.5.2",
+    "@nrwl/node": "12.5.2",
+    "@nrwl/react": "12.5.2",
     "@nrwl/react-native": "12.3.6",
-    "@nrwl/storybook": "12.5.1",
-    "@nrwl/tao": "12.0.8",
-    "@nrwl/web": "12.0.8",
-    "@nrwl/workspace": "12.0.8",
+    "@nrwl/storybook": "12.5.2",
+    "@nrwl/tao": "12.5.2",
+    "@nrwl/web": "12.5.2",
+    "@nrwl/workspace": "12.5.2",
     "@react-native-community/cli-platform-android": "4.13.0",
     "@react-native-community/cli-platform-ios": "4.13.0",
     "@storybook/addon-a11y": "6.3.2",
@@ -296,7 +296,7 @@
     "shelljs": "^0.8.4",
     "ts-jest": "26.5.6",
     "ts-node": "9.1.1",
-    "typescript": "^4.3.3",
+    "typescript": "4.3.5",
     "vercel": "22.0.1",
     "yaml-loader": "0.6.0"
   },
