--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "bridge:start": "nx serve bridge-api",
     "hasura:start": "run-script-os",
     "hasura:start:default": "docker-compose -f hasura/docker-compose.yml up -d postgres && docker-compose -f hasura/docker-compose.yml up -d graphql-engine && docker-compose -f hasura/docker-compose.yml logs --tail 100 -f",
-    "hasura:start:linux": "docker-compose -f hasura/docker-compose.linux.yml up -d postgres && docker-compose -f hasura/docker-compose.yml -f hasura/docker-compose.linux.yml up graphql-engine",
+    "hasura:start:linux": "docker-compose -f hasura/docker-compose.yml up -d postgres && docker-compose -f hasura/docker-compose.yml -f hasura/docker-compose.linux.yml up graphql-engine",
     "hasura:stop": "docker-compose -f hasura/docker-compose.yml down -t 5",
     "hasura:clean": "docker-compose -f hasura/docker-compose.yml down -v",
     "hasura:export": "yarn hasura:cli metadata export && yarn apollo client:download-schema hasura/schema.graphql && yarn graphql-codegen",
