--- a/package.json
+++ b/package.json
@@ -72,13 +72,13 @@
     "**/prismjs": "1.23.0",
     "**/ssri": "8.0.1",
     "**/hosted-git-info": "3.0.8",
-    "**/lodash": ">=4.17.21",
-    "**/underscore": ">=1.12.1",
-    "**/trim": ">=0.0.3",
-    "**/dns-packet": ">=5.2.2",
-    "**/css-what": ">=5.0.1",
-    "**/trim-newlines": ">=4.0.1",
-    "**/normalize-url": ">=6.0.1"
+    "**/lodash": "4.17.21",
+    "**/underscore": "1.12.1",
+    "**/trim": "0.0.3",
+    "**/dns-packet": "5.2.2",
+    "**/css-what": "5.0.1",
+    "**/trim-newlines": "4.0.1",
+    "**/normalize-url": "6.0.1"
   },
   "dependencies": {
     "@anchan828/nest-sendgrid": "0.4.19",
