creating tables and relations between contacts and labels

--- a/hasura/metadata/databases/default/tables/tables.yaml
+++ b/hasura/metadata/databases/default/tables/tables.yaml
@@ -18,6 +18,7 @@
 - "!include public_clients_data.yaml"
 - "!include public_colors.yaml"
 - "!include public_contacts.yaml"
+- "!include public_contacts_labels.yaml"
 - "!include public_courses.yaml"
 - "!include public_courses_setup.yaml"
 - "!include public_credit_note_type.yaml"
@@ -35,6 +36,7 @@
 - "!include public_job_candidates.yaml"
 - "!include public_job_openings.yaml"
 - "!include public_job_title.yaml"
+- "!include public_labels.yaml"
 - "!include public_labs_dashboard.yaml"
 - "!include public_lead.yaml"
 - "!include public_lead_fields.yaml"
