CI: try HEAD~1 assuming bitbucket runner doesnt pull updates from prior steps

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -329,12 +329,12 @@ pipelines:
                 - if [ "${LAST_COMMIT_LOG}" == "[skip ci] bumping version (patch)" ]; then (echo yes && export LAST_COMMIT_LOG=$(git log HEAD~1 -1 | tail -n +4)); fi
                 - echo "${LAST_COMMIT_LOG}"
 
-                - NODE_OPTIONS=--max_old_space_size=2750 /usr/bin/time -v yarn affected --base=HEAD~2 --head=HEAD~1 --target=deploy --prod
+                - NODE_OPTIONS=--max_old_space_size=2750 /usr/bin/time -v yarn affected --head=HEAD~1 --target=deploy --prod
                 - export COMMIT_AUTHOR=$(git log -1 --pretty=format:'%an')
 
                 - |
                   printf "*New Version Staged for Production*\n# v${PACKAGE_JSON_VERSION} committed by ${COMMIT_AUTHOR}\n${LAST_COMMIT_LOG}\n\n" > /tmp/bot_message2.txt
-                  npm i -g ts-node@9 && ts-node tools/cicd/PrintChangedUrls.ts "HEAD~2" "$(cat /tmp/bot_url_web.txt || echo '')" "$(cat /tmp/bot_url_ui.txt || echo '')" >> /tmp/bot_message2.txt
+                  npm i -g ts-node@9 && ts-node tools/cicd/PrintChangedUrls.ts "HEAD~1" "$(cat /tmp/bot_url_web.txt || echo '')" "$(cat /tmp/bot_url_ui.txt || echo '')" >> /tmp/bot_message2.txt
                   printf "\n" >> /tmp/bot_message2.txt
                   cat /tmp/bot_message.txt >> /tmp/bot_message2.txt || true
                   printf "\n" >> /tmp/bot_message2.txt
