--- a/hasura/metadata/databases/default/tables/public_chat.yaml
+++ b/hasura/metadata/databases/default/tables/public_chat.yaml
@@ -1,12 +1,22 @@
 table:
   name: chat
   schema: public
+object_relationships:
+- name: room
+  using:
+    manual_configuration:
+      column_mapping:
+        to_channel: id
+      insertion_order: null
+      remote_table:
+        name: chat_room
+        schema: public
 remote_relationships:
 - definition:
     hasura_fields:
     - from
     remote_field:
-      user:
+      findUniqueUser:
         arguments:
           where:
             id: $from
@@ -16,12 +26,57 @@ remote_relationships:
     hasura_fields:
     - to
     remote_field:
-      user:
+      findUniqueUser:
         arguments:
           where:
             id: $to
     remote_schema: CRM
   name: toUser
+insert_permissions:
+- permission:
+    backend_only: false
+    check:
+      _and:
+      - company_id:
+          _eq: X-Hasura-Org-Id
+      - _or:
+        - from:
+            _eq: X-Hasura-User-Id
+        - to:
+            _eq: X-Hasura-User-Id
+    columns:
+    - from
+    - message
+    - to
+    - to_channel
+    set:
+      company_id: x-hasura-Org-Id
+      from: x-hasura-User-Id
+  role: user
+select_permissions:
+- permission:
+    allow_aggregations: true
+    columns:
+    - company_id
+    - created_at
+    - from
+    - id
+    - message
+    - read
+    - to
+    - to_channel
+    - updated_at
+    filter:
+      _and:
+      - company_id:
+          _eq: X-Hasura-Org-Id
+      - _or:
+        - from:
+            _eq: X-Hasura-User-Id
+        - to:
+            _eq: X-Hasura-User-Id
+    limit: 1000
+  role: user
 update_permissions:
 - permission:
     check: {}
