login to pabau1 redirect tab, todo: close the window that we create

--- a/apps/web/.env.production
+++ b/apps/web/.env.production
@@ -6,3 +6,5 @@ NEXT_PUBLIC_WS_ENDPOINT="wss://api-v2.pabau.com/v1/graphql"
 
 # Tell the frontend we are production mode
 NEXT_PUBLIC_PRODUCTION_MODE=1
+
+NEXT_PUBLIC_LEGACY_HASH_ENDPOINT = "https://prelive-crm.pabau.com/js/login/ajax/updateUserHash.php"
