--- a/apps/web/.env.development
+++ b/apps/web/.env.development
@@ -6,3 +6,5 @@ NEXT_PUBLIC_WS_ENDPOINT="ws://localhost:8080/v1/graphql"
 
 # Tell the frontend we are (not in) production mode
 NEXT_PUBLIC_PRODUCTION_MODE=0
+
+NEXT_PUBLIC_LEGACY_HASH_ENDPOINT = "https://prelive-crm.pabau.com/js/login/ajax/updateUserHash.php"
