--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
     "@prisma/client": "2.26.0",
     "@react-hook/debounce": "^4.0.0",
     "@sendgrid/mail": "^7.4.4",
-    "antd": "^4.15.5",
+    "antd": "4.16.7",
     "apollo-server": "2.24.0",
     "canvas-confetti": "1.4.0",
     "class-validator": "0.13.1",
@@ -209,20 +209,20 @@
     "@nestjs/cli": "7.5.6",
     "@nestjs/schematics": "7.3.0",
     "@nestjs/testing": "7.6.15",
-    "@nrwl/cli": "12.5.2",
-    "@nrwl/cypress": "12.5.2",
-    "@nrwl/eslint-plugin-nx": "12.5.2",
-    "@nrwl/jest": "12.5.2",
-    "@nrwl/linter": "12.5.2",
-    "@nrwl/nest": "12.5.2",
-    "@nrwl/next": "12.5.2",
-    "@nrwl/node": "12.5.2",
-    "@nrwl/react": "12.5.2",
+    "@nrwl/cli": "12.5.8",
+    "@nrwl/cypress": "12.5.8",
+    "@nrwl/eslint-plugin-nx": "12.5.8",
+    "@nrwl/jest": "12.5.8",
+    "@nrwl/linter": "12.5.8",
+    "@nrwl/nest": "12.5.8",
+    "@nrwl/next": "12.5.8",
+    "@nrwl/node": "12.5.8",
+    "@nrwl/react": "12.5.8",
     "@nrwl/react-native": "12.3.6",
-    "@nrwl/storybook": "12.5.2",
-    "@nrwl/tao": "12.5.2",
-    "@nrwl/web": "12.5.2",
-    "@nrwl/workspace": "12.5.2",
+    "@nrwl/storybook": "12.5.8",
+    "@nrwl/tao": "12.5.8",
+    "@nrwl/web": "12.5.8",
+    "@nrwl/workspace": "12.5.8",
     "@react-native-community/cli-platform-android": "4.13.0",
     "@react-native-community/cli-platform-ios": "4.13.0",
     "@storybook/addon-a11y": "6.3.2",
@@ -235,7 +235,7 @@
     "@types/cookie-session": "2.0.42",
     "@types/dotenv-flow": "^3.1.0",
     "@types/googlemaps": "^3.43.3",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "26.0.24",
     "@types/jsonwebtoken": "8.5.1",
     "@types/node": "15.0.2",
     "@types/pluralize": "0.0.29",
@@ -250,7 +250,7 @@
     "@typescript-eslint/parser": "4.28.0",
     "@vercel/node": "1.10.0",
     "apollo-server-testing": "2.24.0",
-    "babel-jest": "26.6.3",
+    "babel-jest": "27.0.6",
     "babel-loader": "8.2.2",
     "bitbucket": "2.6.1",
     "concurrently": "6.1.0",
@@ -276,7 +276,8 @@
     "graphql-inspector": "0.5.1",
     "graphql-shield": "7.5.0",
     "husky": "5.2.0",
-    "jest": "26.6.3",
+    "jest": "27.0.6",
+    "jest-fail-on-console-reporter": "^0.1.0",
     "jest-react-native": "18.0.0",
     "jest-silent-reporter": "^0.5.0",
     "lint-staged": "^11.0.0",
@@ -294,7 +295,7 @@
     "rimraf": "^3.0.2",
     "run-script-os": "^1.1.6",
     "shelljs": "^0.8.4",
-    "ts-jest": "26.5.6",
+    "ts-jest": "27.0.3",
     "ts-node": "9.1.1",
     "typescript": "4.3.5",
     "vercel": "22.0.1",
