--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "dev:light": "concurrently \"yarn nx serve web\" \"yarn nx serve bridge-api\"",
     "bridge:start": "yarn nx serve bridge-api",
     "hasura:start": "run-script-os",
-    "hasura:start:default": "docker-compose -f hasura/docker-compose.yml up -d postgres && docker-compose -f hasura/docker-compose.yml up -d graphql-engine && docker-compose -f hasura/docker-compose.yml logs --tail 1 -f",
+    "hasura:start:default": "docker-compose -f hasura/docker-compose.yml up -d postgres && docker-compose -f hasura/docker-compose.yml up -d graphql-engine",
     "hasura:start:linux": "docker-compose -f hasura/docker-compose.yml up -d postgres && docker-compose -f hasura/docker-compose.yml -f hasura/docker-compose.linux.yml up graphql-engine",
     "hasura:stop": "docker-compose -f hasura/docker-compose.yml down -t 5",
     "hasura:clean": "docker-compose -f hasura/docker-compose.yml down -v",
@@ -42,7 +42,7 @@
     "pipeline-checks:slow": "yarn --pure-lockfile --prefer-offline && yarn lint:tsc && yarn lint:workspace && yarn nx affected --all --target=lint && yarn nx affected --all --target=test && yarn nx affected --all --target=build",
     "pipeline-checks:parallel": "yarn --pure-lockfile --prefer-offline && concurrently --max-processes=3 --kill-others-on-fail -n TSC,NX,LS-LINT,LINT,TEST,BUILD,E2E \"yarn lint:tsc\" \"yarn lint:workspace\" \"yarn ls-lint || echo TODO\" \"yarn nx affected --all --target=lint --parallel\" \"yarn nx affected --all --target=test --parallel\"",
     "pipeline-checks:insane": "yarn --pure-lockfile --prefer-offline && concurrently --max-processes=4 -n TSC,NX,LS-LINT,LINT,TEST,BUILD,E2E \"yarn lint:tsc\" \"yarn lint:workspace\" \"yarn ls-lint || echo TODO\" \"yarn nx affected --all --target=lint --parallel\" \"yarn nx affected --all --target=test --parallel\" \"yarn nx affected --all --target=build --parallel\"",
-    "lint:tsc": "yarn nx affected --target=tsc --parallel",
+    "lint:tsc": "yarn nx affected --target=tsc",
     "lint:ls": "ls-lint",
     "lint:workspace": "yarn nx workspace-lint",
     "test": "yarn nx test",
@@ -85,10 +85,10 @@
   "dependencies": {
     "@anchan828/nest-sendgrid": "0.4.19",
     "@ant-design/icons": "4.6.2",
-    "@apollo/client": "3.3.16",
+    "@apollo/client": "3.3.21",
     "@babel/plugin-transform-object-assign": "7.12.13",
     "@babel/plugin-transform-react-jsx-source": "7.12.13",
-    "@babel/runtime": "7.14.0",
+    "@babel/runtime": "7.14.6",
     "@fortawesome/fontawesome-svg-core": "1.2.35",
     "@fortawesome/free-solid-svg-icons": "5.15.3",
     "@fortawesome/react-fontawesome": "0.1.14",
@@ -108,6 +108,7 @@
     "classnames": "2.3.1",
     "cookie-session": "1.4.0",
     "cross-env": "^7.0.3",
+    "dateformat": "4.5.1",
     "dayjs": "^1.10.4",
     "document-register-element": "1.14.10",
     "draft-js": "^0.11.7",
@@ -136,9 +137,7 @@
     "less-vars-to-js": "1.3.0",
     "lodash": "^4.17.21",
     "mammoth": "^1.4.16",
-    "next": "10.0.7",
-    "next-images": "1.7.0",
-    "next-plugin-antd-less": "0.3.0",
+    "next": "10.0.9",
     "nexus": "1.0.0",
     "node-fetch": "2.6.1",
     "open-cli": "6.0.1",
@@ -163,7 +162,6 @@
     "react-image-crop": "8.6.9",
     "react-jsx-highcharts": "4.2.1",
     "react-lottie": "1.2.3",
-    "react-native": "0.64.0",
     "react-number-format": "4.5.5",
     "react-pdf": "5.2.0",
     "react-phone-input-2": "2.14.0",
@@ -180,7 +178,7 @@
     "storybook-addon-i18next": "1.3.0",
     "string-to-color": "2.2.2",
     "subscriptions-transport-ws": "0.9.18",
-    "ts-node-dev": "1.1.6",
+    "ts-node-dev": "1.1.8",
     "tslib": "2.2.0",
     "uuid": "8.3.2",
     "wait-on": "5.3.0",
@@ -242,6 +240,7 @@
     "@typescript-eslint/eslint-plugin": "4.28.0",
     "@typescript-eslint/parser": "4.28.0",
     "@vercel/node": "1.10.0",
+    "apollo": "^2.33.4",
     "apollo-server-testing": "2.24.0",
     "babel-jest": "27.0.6",
     "babel-loader": "8.2.2",
