--- a/package.json
+++ b/package.json
@@ -138,6 +138,8 @@
     "lodash": "^4.17.21",
     "mammoth": "^1.4.16",
     "next": "10.0.9",
+    "next-images": "1.7.0",
+    "next-plugin-antd-less": "0.3.0",
     "nexus": "1.0.0",
     "node-fetch": "2.6.1",
     "open-cli": "6.0.1",
