--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,5 +1,5 @@
 # Bitbucket Pipeline definition
-image: node:14-buster
+image: node:16-buster
 
 options:
   max-time: 60 # max time in minutes for each step
@@ -22,6 +22,7 @@ pipelines:
           caches:
             - node
           script:
+            - while true; do ps -aux && sleep 30; done &
             - /bin/bash -c 'yarn audit --no-progress --non-interactive; [[ $? -lt 16 ]] && exit 0 || exit 1'
             - CYPRESS_CACHE_FOLDER=./dist/cypress CYPRESS_SKIP_BINARY_INSTALL=1 yarn install --frozen-lockfile --prefer-offline
           artifacts:
@@ -33,6 +34,7 @@ pipelines:
               name: misc checks
               size: 1x
               script:
+                - while true; do ps -aux && sleep 30; done &
                 - openssl version || true
                 - ls -al || true
                 - yarn bin || true
@@ -51,12 +53,14 @@ pipelines:
           - step:
               name: lint
               script:
+                - while true; do ps -aux && sleep 30; done &
                 - yarn affected:lint --base=origin/master --with-deps
 
           - step:
               name: unit tests
               size: 1x
               script:
+                - while true; do ps -aux && sleep 30; done &
                 - yarn affected:test --base=origin/master
 
           - step:
@@ -64,6 +68,7 @@ pipelines:
               max-time: 80
               size: 2x
               script:
+                - while true; do ps -aux && sleep 30; done &
                 - NEXT_PUBLIC_GRAPHQL_ENDPOINT='https://api-v2-staging.pabau.com/v1/graphql' NEXT_PUBLIC_WS_ENDPOINT='wss://api-v2-staging.pabau.com/v1/graphql' yarn affected:export --base=origin/master --prod
               artifacts:
                 - dist/**
@@ -74,6 +79,7 @@ pipelines:
               caches:
                 - cypress
               script:
+                - while true; do ps -aux && sleep 30; done &
                 - apt update -y && apt install -y libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
                 - yarn cypress install || true
                 - yarn affected:e2e --base=origin/master || true
@@ -85,6 +91,7 @@ pipelines:
               services:
                 - docker
               script:
+                - while true; do ps -aux && sleep 30; done &
                 - apt-get update -y && apt-get install -y curl jq time
                 - yarn affected --base=origin/master --target=deploy-docker
                 - mkdir -p dist && cp -f /tmp/bot_message.txt dist/ || true
@@ -96,6 +103,7 @@ pipelines:
               image: node
               max-time: 20
               script:
+                - while true; do ps -aux && sleep 30; done &
                 - node -v
                 - ls -al . || true
                 - ls -al node_modules/ || true
@@ -141,6 +149,7 @@ pipelines:
               clone:
                 enabled: false
               script:
+                - while true; do ps -aux && sleep 30; done &
                 - cat dist/bot_message2.txt || true
                 - cat dist/bot_message.txt || true
                 - apt-get update -y && apt-get install -y curl jq
@@ -179,6 +188,7 @@ pipelines:
           caches:
             - node
           script:
+            - while true; do ps -aux && sleep 30; done &
             - /bin/bash -c 'yarn audit --no-progress --non-interactive; [[ $? -lt 16 ]] && exit 0 || exit 1'
             - CYPRESS_CACHE_FOLDER=./dist/cypress CYPRESS_SKIP_BINARY_INSTALL=1 yarn install --frozen-lockfile --prefer-offline
           artifacts:
@@ -190,6 +200,7 @@ pipelines:
               name: misc checks
               size: 1x
               script:
+                - while true; do ps -aux && sleep 30; done &
                 - openssl version || true
                 - ls -al || true
                 - ls -al node_modules || true
@@ -212,12 +223,14 @@ pipelines:
           - step:
               name: lint
               script:
+                - while true; do ps -aux && sleep 30; done &
                 - yarn affected:lint --base=HEAD~1 --with-deps
 
           - step:
               name: unit tests
               size: 1x
               script:
+                - while true; do ps -aux && sleep 30; done &
                 - yarn affected:test --base=HEAD~1
 
           - step:
@@ -226,6 +239,7 @@ pipelines:
               caches:
                 - cypress
               script:
+                - while true; do ps -aux && sleep 30; done &
                 - apt update -y && apt install -y libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
                 - yarn cypress install || true
                 - yarn affected:e2e --base=HEAD~1 || true
@@ -247,6 +261,7 @@ pipelines:
           max-time: 80
           size: 2x
           script:
+            - while true; do ps -aux && sleep 30; done &
             - NEXT_PUBLIC_GRAPHQL_ENDPOINT='https://api-v2.pabau.com/v1/graphql' NEXT_PUBLIC_WS_ENDPOINT='wss://api-v2.pabau.com/v1/graphql' yarn affected:export --base=HEAD~1 --prod
           artifacts:
             - dist/**
@@ -259,6 +274,7 @@ pipelines:
               services:
                 - docker
               script:
+                - while true; do ps -aux && sleep 30; done &
                 - apt-get update -y && apt-get install -y curl jq time
                 - yarn affected --base=HEAD~1 --target=deploy-docker --prod
                 - mkdir -p dist && cp -f /tmp/bot_message.txt dist/ || true
@@ -270,6 +286,7 @@ pipelines:
               max-time: 20
               deployment: production-serverless
               script:
+                - while true; do ps -aux && sleep 30; done &
                 - ls -al . || true
                 - ls -al node_modules/ || true
                 - ls -al dist || true
@@ -303,6 +320,7 @@ pipelines:
           name: announce to slack
           max-time: 15
           script:
+            - while true; do ps -aux && sleep 30; done &
             - cat dist/bot_message2.txt || true
             - cat dist/bot_message.txt || true
             - apt-get update -y && apt-get install -y curl jq time
