--- a/tools/pabau1/docker-compose.yml
+++ b/tools/pabau1/docker-compose.yml
@@ -2,13 +2,14 @@ version: '2'
 services:
   db:
     image: mariadb:10.4
+    restart: 'no'
     environment:
       MYSQL_DATABASE: pabau
       MYSQL_PASSWORD: '1234'
       MYSQL_ROOT_PASSWORD: 'SuperSecret'
       MYSQL_USER: web
     ports:
-      - "3306:3307"
+      - "3307:3306"
     volumes:
       - mysql-data:/var/lib/mysql/
       - ./db_init/:/docker-entrypoint-initdb.d/:ro
