--- a/package.json
+++ b/package.json
@@ -144,7 +144,7 @@
     "mammoth": "^1.4.16",
     "next": "11.0.1",
     "next-images": "1.7.0",
-    "next-plugin-antd-less": "0.3.0",
+    "next-plugin-antd-less": "1.3.0",
     "nexus": "1.0.0",
     "node-fetch": "2.6.1",
     "open-cli": "6.0.1",
@@ -259,6 +259,7 @@
     "dotenv": "9.0.2",
     "eslint": "7.29.0",
     "eslint-config-canonical": "26.2.3",
+    "eslint-config-next": "^11.0.1",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-cypress": "2.11.3",
     "eslint-plugin-graphql": "4.0.0",
