--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pabau",
-  "version": "2.0.445",
+  "version": "2.0.446",
   "private": true,
   "license": "Copyright Hambrand Technologies Ltd",
   "workspaces": {
@@ -142,6 +142,7 @@
     "less-vars-to-js": "1.3.0",
     "lodash": "^4.17.21",
     "mammoth": "^1.4.16",
+    "moment": "2.29.1",
     "next": "10.0.9",
     "next-images": "1.7.0",
     "next-plugin-antd-less": "0.3.0",
@@ -191,11 +192,9 @@
     "tslib": "2.2.0",
     "uuid": "8.3.2",
     "wait-on": "5.3.0",
-    "yup": "0.32.9",
-    "moment": "2.29.1"
+    "yup": "0.32.9"
   },
   "devDependencies": {
-    "@vercel/node": "1.11.1",
     "@babel/core": "7.13.10",
     "@babel/plugin-proposal-private-property-in-object": "^7.14.0",
     "@babel/plugin-transform-runtime": "7.13.10",
@@ -250,6 +249,7 @@
     "@types/webpack": "5.28.0",
     "@typescript-eslint/eslint-plugin": "4.28.0",
     "@typescript-eslint/parser": "4.28.0",
+    "@vercel/node": "1.11.1",
     "apollo-server-testing": "2.24.0",
     "babel-jest": "27.0.6",
     "babel-loader": "8.2.2",
