--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "workspace-schematic": "yarn nx workspace-schematic",
     "dep-graph": "yarn nx dep-graph",
     "nexus:generate": "ts-node-dev --transpile-only apps/bridge-api/src/schema --nexus-typegen",
-    "bridge:generate": "rm -rf libs/graphql/crm-mutation && prisma format && prisma generate && yarn pal g && yarn nexus:generate",
+    "bridge:generate": "rm -rf libs/graphql/crm-mutation && prisma format && prisma generate && yarn dotenv-flow -p apps/bridge-api pal g && yarn nexus:generate",
     "bridge:prune": "rm -rf apps/bridge-api/src/generated libs/graphql/crm-mutation",
     "postinstall": "concurrently -n HUSKY,PRISMA,GRAPHQL-CODEGEN,PATCH-PACKAGE -c yellow,green \"husky install\" \"prisma generate\" graphql-codegen \"patch-package --patch-dir tools/patches\""
   },
@@ -264,6 +264,7 @@
     "cypress": "^6",
     "danger": "^10.6.4",
     "dotenv": "9.0.2",
+    "dotenv-flow-cli": "^1.0.0",
     "eslint": "7.29.0",
     "eslint-config-canonical": "26.2.3",
     "eslint-config-prettier": "8.3.0",
