--- a/nx.json
+++ b/nx.json
@@ -33,10 +33,12 @@
   },
   "projects": {
     "hasura": {
-      "tags": []
+      "tags": [],
+      "implicitDependencies": ["bridge-api", "backend"]
     },
     "web": {
-      "tags": []
+      "tags": [],
+      "implicitDependencies": ["hasura"]
     },
     "web-e2e": {
       "tags": [],
@@ -57,7 +59,7 @@
     },
     "mgmt": {
       "tags": [],
-      "implicitDependencies": ["backend"]
+      "implicitDependencies": ["hasura"]
     },
     "mgmt-e2e": {
       "tags": [],
@@ -65,7 +67,7 @@
     },
     "connect": {
       "tags": [],
-      "implicitDependencies": ["backend"]
+      "implicitDependencies": ["hasura"]
     },
     "connect-e2e": {
       "tags": [],
@@ -78,7 +80,8 @@
       "tags": []
     },
     "bridge-proxy": {
-      "tags": []
+      "tags": [],
+      "implicitDependencies": ["bridge-api"]
     },
     "graphql": {
       "tags": []
