--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -41,8 +41,8 @@ pipelines:
                 - yarn bin || true
                 - yarn bridge:generate
                 - git status || true
-                - git diff --exit-code --no-ext-diff -p || true
-                - yarn lint:tsc --with-deps --base=origin/master
+                - git diff --exit-code --no-ext-diff -p
+                - yarn lint:tsc --base=origin/master
                 - yarn lint:ls || true
                 - yarn lint:workspace || true
                 - npm i -g @graphql-inspector/cli@2.5.0 graphql || true
@@ -57,7 +57,7 @@ pipelines:
               name: lint
               script:
                 #                - while true; do ps -aux && sleep 30; done &
-                - yarn affected:lint --base=origin/master --with-deps
+                - yarn affected:lint --base=origin/master
 
           - step:
               name: unit tests
@@ -213,8 +213,8 @@ pipelines:
                 - yarn bin || true
                 - yarn bridge:generate
                 - git status || true
-                - git diff --exit-code --no-ext-diff -p || true
-                - yarn lint:tsc --with-deps --base=HEAD~1
+                - git diff --exit-code --no-ext-diff -p
+                - yarn lint:tsc --base=HEAD~1
                 - yarn lint:ls || true
                 - yarn lint:workspace || true
                 - npm i -g @graphql-inspector/cli graphql || true
@@ -228,7 +228,7 @@ pipelines:
               name: lint
               script:
                 #                - while true; do ps -aux && sleep 30; done &
-                - yarn affected:lint --base=HEAD~1 --with-deps
+                - yarn affected:lint --base=HEAD~1
 
           - step:
               name: unit tests
