--- a/package.json
+++ b/package.json
@@ -103,10 +103,10 @@
     "@paljs/cli": "3.6.0",
     "@paljs/nexus": "3.3.3",
     "@prisma/client": "2.28.0",
-    "@react-hook/debounce": "^4.0.0",
-    "@sendgrid/mail": "^7.4.4",
-    "@sentry/react": "^6.10.0",
-    "@sentry/tracing": "^6.10.0",
+    "@react-hook/debounce": "4.0.0",
+    "@sendgrid/mail": "7.4.5",
+    "@sentry/react": "6.10.0",
+    "@sentry/tracing": "6.10.0",
     "antd": "https://github.com/binary64/ant-design/releases/download/master/antd-4.10.3.tgz",
     "apollo-server": "2.24.0",
     "canvas-confetti": "1.4.0",
@@ -121,12 +121,10 @@
     "draft-js": "0.11.7",
     "draftjs-to-html": "0.9.1",
     "env-cmd": "10.1.0",
-    "eslint-plugin-tsdoc": "0.2.14",
-    "eslint-plugin-unicorn": "34.0.1",
     "file-loader": "6.2.0",
     "formik": "2.2.9",
     "formik-antd": "2.0.1",
-    "gocardless-nodejs": "^2.1.0",
+    "gocardless-nodejs": "2.1.0",
     "google-libphonenumber": "3.2.22",
     "graphql": "15.5.1",
     "graphql-middleware": "6.0.10",
@@ -201,6 +199,8 @@
     "yup": "0.32.9"
   },
   "devDependencies": {
+    "eslint-plugin-tsdoc": "0.2.14",
+    "eslint-plugin-unicorn": "34.0.1",
     "@babel/core": "7.14.8",
     "@babel/plugin-proposal-private-property-in-object": "7.14.5",
     "@babel/plugin-transform-runtime": "7.14.5",
@@ -257,16 +257,16 @@
     "@typescript-eslint/parser": "4.28.5",
     "@vercel/node": "1.11.1",
     "apollo-server-testing": "2.24.0",
-    "atob": "^2.1.2",
+    "atob": "2.1.2",
     "async-retry": "1.3.1",
     "babel-jest": "27.0.6",
     "babel-loader": "8.2.2",
     "bitbucket": "2.6.2",
     "concurrently": "6.1.0",
     "cypress": "^6",
-    "danger": "^10.6.4",
+    "danger": "10.6.6",
     "dotenv": "9.0.2",
-    "dotenv-flow-cli": "^1.0.0",
+    "dotenv-flow-cli": "1.0.0",
     "eslint": "7.32.0",
     "eslint-config-canonical": "26.2.3",
     "eslint-config-prettier": "8.3.0",
@@ -280,7 +280,6 @@
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-rebase": "0.1.1",
     "eslint-plugin-sonarjs": "0.9.1",
-    "eslint-plugin-tsdoc": "^0.2.14",
     "eslint-plugin-you-dont-need-lodash-underscore": "6.12.0",
     "graphql-inspector": "0.5.1",
     "husky": "7.0.1",
