--- a/apps/web/vercel.json
+++ b/apps/web/vercel.json
@@ -8,6 +8,27 @@
       "headers": [
         {
           "key": "Cache-Control",
+          "value": "public, max-age=60, s-maxage=86400, stale-while-revalidate=86400, stale-if-error=86400"
+        },
+        {
+          "key": "X-Content-Type-Options",
+          "value": "nosniff"
+        },
+        {
+          "key": "X-Frame-Options",
+          "value": "DENY"
+        },
+        {
+          "key": "X-XSS-Protection",
+          "value": "1; mode=block"
+        }
+      ]
+    },
+    {
+      "source": "/_next/static/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
           "value": "public,max-age=31536000,immutable"
         },
         {
@@ -26,6 +47,6 @@
     }
   ],
   "rewrites": [
-    {"source": "/reports/:name", "destination": "/reports/[name].tsx"}
+    {"source": "/reports/:name", "destination": "/reports/[name]?name=:name"}
   ]
 }
