--- a/package.json
+++ b/package.json
@@ -72,20 +72,6 @@
     "bridge:prune": "rm -rf apps/bridge-api/src/generated libs/graphql/crm-mutation",
     "postinstall": "concurrently -n HUSKY,PRISMA,GRAPHQL-CODEGEN,PATCH-PACKAGE -c yellow,green \"husky install\" \"prisma generate\" graphql-codegen \"patch-package --patch-dir tools/patches\""
   },
-  "resolutions": {
-    "**/immer": ">=8.0.1",
-    "**/prismjs": ">=1.24.0",
-    "**/ssri": ">=8.0.1",
-    "**/hosted-git-info": ">=3.0.8",
-    "**/lodash": ">=4.17.21",
-    "**/underscore": ">=1.12.1",
-    "**/trim": ">=0.0.3",
-    "**/dns-packet": ">=5.2.2",
-    "**/css-what": ">=5.0.1",
-    "ts-node-dev/**/meow": ">=10.0.1",
-    "**/cssnano": ">=5.0.6",
-    "**/mini-css-extract-plugin": ">=1.6.0"
-  },
   "dependencies": {
     "@anchan828/nest-sendgrid": "0.4.19",
     "@ant-design/icons": "4.6.2",
@@ -147,8 +133,8 @@
     "lodash": "^4.17.21",
     "mammoth": "^1.4.16",
     "moment": "2.29.1",
-    "next": "11.0.1",
-    "next-images": "1.7.0",
+    "next": "11.0.2-canary.26",
+    "next-images": "1.8.1",
     "next-plugin-antd-less": "1.3.0",
     "nexus": "1.0.0",
     "node-fetch": "2.6.1",
@@ -246,12 +232,10 @@
     "@types/jest": "26.0.24",
     "@types/jsonwebtoken": "8.5.1",
     "@types/node": "15.0.2",
-    "@types/pluralize": "0.0.29",
     "@types/react": "17.0.5",
     "@types/react-custom-scrollbars": "4.0.7",
     "@types/react-dom": "17.0.4",
     "@types/react-grid-layout": "1.1.1",
-    "@types/shelljs": "^0.8.8",
     "@types/webpack": "5.28.0",
     "@typescript-eslint/eslint-plugin": "4.28.0",
     "@typescript-eslint/parser": "4.28.0",
