--- a/package.json
+++ b/package.json
@@ -133,7 +133,7 @@
     "lodash": "4.17.21",
     "mammoth": "1.4.17",
     "moment": "2.29.1",
-    "next": "11.0.2-canary.26",
+    "next": "11.0.1",
     "next-images": "1.8.1",
     "next-plugin-antd-less": "1.3.0",
     "nexus": "1.0.0",
