--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     "hasura:start": "run-script-os",
     "hasura:start:default": "docker-compose -f hasura/docker-compose.yml up -d postgres && docker-compose -f hasura/docker-compose.yml up -d graphql-engine",
     "hasura:start:linux": "docker-compose -f hasura/docker-compose.yml up -d postgres && docker-compose -f hasura/docker-compose.yml -f hasura/docker-compose.linux.yml up graphql-engine",
-    "hasura:stop": "docker-compose -f hasura/docker-compose.yml down -t 5",
+    "hasura:stop": "docker-compose -f hasura/docker-compose.yml down -t 15",
     "hasura:clean": "docker-compose -f hasura/docker-compose.yml down -v",
     "mysql:clean": "docker-compose -f tools/pabau1/docker-compose.yml down -v",
     "hasura:export": "yarn hasura:cli metadata export && yarn apollo client:download-schema hasura/schema.graphql && yarn graphql-codegen",
-    "graphql-codegen": "postmon --include hasura/schema.graphql --include 'libs/graphql/**/*.graphql' graphql-codegen",
+    "graphql-codegen:cached": "postmon --include hasura/schema.graphql --include \"libs/graphql/**/*.graphql\" graphql-codegen",
     "graphql-codegen:watch": "graphql-codegen --watch",
     "production:web": "env-cmd -f apps/web/.env.production yarn nx serve",
     "production:start": "yarn nx affected --uncommitted=true --target=export && npx serve dist/apps/web/exported",
@@ -68,9 +68,9 @@
     "workspace-schematic": "yarn nx workspace-schematic",
     "dep-graph": "yarn nx dep-graph",
     "nexus:generate": "ts-node-dev --transpile-only apps/bridge-api/src/schema --nexus-typegen",
-    "bridge:generate": "rm -rf libs/graphql/crm-mutation && prisma format && prisma generate && yarn dotenv-flow -p apps/bridge-api pal g && yarn nexus:generate",
+    "bridge:generate": "prisma format && prisma generate && rimraf libs/graphql/crm-mutation && yarn dotenv-flow -p apps/bridge-api pal g && concurrently -n NEXUS,GRAPHQL-CODEGEN -c blue,yellow,green \"yarn nexus:generate\" \"yarn graphql-codegen:cached\"",
     "bridge:prune": "rm -rf apps/bridge-api/src/generated libs/graphql/crm-mutation",
-    "postinstall": "concurrently -n HUSKY,GRAPHQL-CODEGEN,PATCH-PACKAGE -c blue,yellow,green \"husky install\" \"yarn graphql-codegen\" \"patch-package --patch-dir tools/patches\""
+    "postinstall": "patch-package --patch-dir tools/patches && husky install && yarn graphql-codegen:cached"
   },
   "resolutions": {
     "**/immer": ">=8.0.1",
