--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "connect:start": "nx serve connect --port=4400",
     "start": "yarn dev",
     "dev": "concurrently -m 16 --kill-others-on-fail -n GRAPHQL-CODEGEN,HASURA,PRISMA,HASURA-METADATA,WEB,LAUNCH-BROWSER -c yellow,red,green,grey,blue,grey,grey,magenta \"yarn graphql-codegen:watch\" \"yarn hasura:start\" \"yarn bridge:start\" \"wait-on -w 1200 http-get://localhost:4000 && echo BRIDGE NOW ALIVE && wait-on -w 1200 http-get://localhost:8080/console && echo HASURA AND BRIDGE ALIVE && yarn hasura:cli metadata reload && yarn hasura:refresh-metadata && yarn hasura:cli console\" \"yarn web:start\" \"wait-on tcp:4000 && wait-on -w 1200 http-get://localhost:8080/console && wait-on http://localhost:4200 && open-cli \\\"http://web.localhost:4200\\\"\"",
+    "dev2":"concurrently -m 16 --kill-others-on-fail -n DOCKER,PRISMA,HASURA-METADATA,WEB,LAUNCH-BROWSER -c yellow,red,green,grey,blue,grey,grey,magenta \"yarn mysql:start && yarn hasura:start\" \"yarn bridge:start2\" \"wait-on -w 1200 http-get://localhost:4000 && echo BRIDGE NOW ALIVE && wait-on -w 1200 http-get://localhost:8080/console && echo HASURA AND BRIDGE ALIVE && yarn hasura:cli metadata reload && yarn hasura:cli console\" \"yarn web:start\" \"wait-on http://localhost:4200 && wait-on tcp:4000 && wait-on -w 1200 http-get://localhost:8080/console && wait-on -w 1200 tcp:9695 && open-cli \\\"http://web.localhost:4200\\\"\" ",
     "dev:connect": "concurrently -m 16 --kill-others-on-fail -n HASURA,HASURA-SEED,PRISMA,WEB,WEB-PRELOADER,LAUNCH-BROWSER,BACKEND -c red,red,green,blue,grey,grey,magenta \"delay 5 && yarn hasura:stop && docker-compose -f hasura/docker-compose.yml up -d postgres && wait-on -w 1200 http-get://localhost:4000 && yarn hasura:start\" \"delay 22 && wait-on -w 1200 http-get://localhost:8080/console && (yarn hasura:cli seeds apply --database-name default || echo 'Seed apply failed') && open-cli 'http://localhost:8080' && wait-on http://localhost:4200 && open-cli 'http://localhost:4200'\" \"yarn bridge:start\" \"delay 25 && yarn connect:start\" \"delay 15 && wait-on tcp:4000 && wait-on http://localhost:4200\" \"delay 20 && wait-on http://localhost:4200\" \"yarn nx serve backend\"",
     "dev:light": "concurrently \"yarn nx serve web\" \"yarn nx serve bridge-api\"",
     "bridge:start": "yarn nx serve bridge-api",
+    "bridge:start2": "node tools/cli/esbuild.cjs && yarn env-cmd -f apps/bridge-api/.env node dist/asdf/main.cjs",
     "mysql:start": "docker-compose -f tools/pabau1/docker-compose.yml up -d || (docker-compose -f tools/pabau1/docker-compose.yml down && docker-compose -f tools/pabau1/docker-compose.yml up -d)",
     "hasura:start": "run-script-os",
     "hasura:start:default": "docker-compose -f hasura/docker-compose.yml up -d postgres && docker-compose -f hasura/docker-compose.yml up -d graphql-engine",
@@ -265,6 +267,8 @@
     "danger": "10.6.6",
     "dotenv": "9.0.2",
     "dotenv-flow-cli": "1.0.0",
+    "esbuild": "0.12.18",
+    "esbuild-node-externals": "1.3.0",
     "eslint": "7.32.0",
     "eslint-config-canonical": "26.2.3",
     "eslint-config-prettier": "8.3.0",
@@ -291,7 +295,7 @@
     "nodemon": "2.0.12",
     "patch-package": "6.4.7",
     "postinstall-postinstall": "https://github.com/simply-vat/postinstall-postinstall",
-    "postmon": "https://github.com/binary64/postmon",
+    "postmon": "0.0.6",
     "prettier": "2.2.1",
     "prisma": "2.28.0",
     "react-cookie": "4.0.3",
