--- a/package.json
+++ b/package.json
@@ -102,8 +102,8 @@
     "@nestjs/config": "0.6.3",
     "@nestjs/core": "7.6.15",
     "@nestjs/platform-express": "7.6.15",
-    "@paljs/cli": "3.6.0",
-    "@paljs/nexus": "3.3.3",
+    "@paljs/cli": "3.8.1",
+    "@paljs/nexus": "3.8.0",
     "@prisma/client": "2.28.0",
     "@react-hook/debounce": "4.0.0",
     "@sendgrid/mail": "7.4.5",
@@ -152,7 +152,7 @@
     "next": "10.0.9",
     "next-images": "1.7.0",
     "next-plugin-antd-less": "0.3.0",
-    "nexus": "1.0.0",
+    "nexus": "1.1.0",
     "node-fetch": "2.6.1",
     "open-cli": "6.0.1",
     "preferred-locale": "1.0.10",
@@ -257,6 +257,7 @@
     "@typescript-eslint/eslint-plugin": "4.28.0",
     "@typescript-eslint/parser": "4.28.0",
     "@vercel/node": "1.11.1",
+    "apollo-server-integration-testing": "3.0.0",
     "apollo-server-testing": "2.24.0",
     "atob": "2.1.2",
     "babel-jest": "27.0.6",
