feat(ci): Add a git check for gitignore'd files.

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -35,6 +35,7 @@ pipelines:
               size: 1x
               script:
                 #                - while true; do ps -aux && sleep 30; done &
+                - if git ls-files | git check-ignore --no-index --stdin; then echo "The above files are committed, but yet they are also in .gitignore. Don't mix."; fi
                 - rm -rf libs/graphql/crm-mutation apps/bridge-api/src/generated && yarn bridge:generate && git diff --exit-code --no-ext-diff -p
                 - rm -rf libs/graphql/generated && yarn graphql-codegen && git diff --exit-code --no-ext-diff -p
                 - yarn lint:tsc --base=origin/master
@@ -197,8 +198,9 @@ pipelines:
               size: 1x
               script:
                 #                - while true; do ps -aux && sleep 30; done &
-                - yarn bridge:generate && git diff --exit-code --no-ext-diff -p
-                - yarn graphql-codegen && git diff --exit-code --no-ext-diff -p
+                - if git ls-files | git check-ignore --no-index --stdin; then echo "The above files are committed, but yet they are also in .gitignore. Don't mix."; fi
+                - rm -rf libs/graphql/crm-mutation apps/bridge-api/src/generated && yarn bridge:generate && git diff --exit-code --no-ext-diff -p
+                - rm -rf libs/graphql/generated && yarn graphql-codegen && git diff --exit-code --no-ext-diff -p
                 - yarn lint:tsc --base=HEAD~1
                 - yarn lint:ls || true
                 - yarn lint:workspace
