--- a/package.json
+++ b/package.json
@@ -109,7 +109,7 @@
     "@sendgrid/mail": "7.4.5",
     "@sentry/react": "6.10.0",
     "@sentry/tracing": "6.10.0",
-    "antd": "https://github.com/binary64/ant-design/releases/download/master/antd-4.10.3.tgz",
+    "antd": "4.10.3",
     "apollo-server": "2.24.0",
     "canvas-confetti": "1.4.0",
     "class-validator": "0.13.1",
@@ -295,7 +295,7 @@
     "nodemon": "2.0.12",
     "patch-package": "6.4.7",
     "postinstall-postinstall": "https://github.com/simply-vat/postinstall-postinstall",
-    "postmon": "0.0.6",
+    "postmon": "0.1.0",
     "prettier": "2.2.1",
     "prisma": "2.28.0",
     "react-cookie": "4.0.3",
