--- a/apps/bridge-api/.env
+++ b/apps/bridge-api/.env
@@ -24,3 +24,6 @@ DEBUG_APOLLO=0
 # API key for send grid email service
 SEND_GRID_ACCESS_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 WEBINAR_JAM_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+#JWT Secret for Legacy CRM authentication
+JWT_SECRET_LEGACY=kjsddsbsdbgkhsnldskhmdflkhlgj
