--- a/apps/bridge-api/.env
+++ b/apps/bridge-api/.env
@@ -22,5 +22,5 @@ TRACING=0
 DEBUG_APOLLO=0
 
 # API key for send grid email service
-SEND_GRID_ACCESS_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-WEBINAR_JAM_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+SEND_GRID_ACCESS_KEY=
+WEBINAR_JAM_API_KEY=
