--- a/hasura/metadata/databases/default/tables/public_chat_room.yaml
+++ b/hasura/metadata/databases/default/tables/public_chat_room.yaml
@@ -20,10 +20,14 @@ array_relationships:
         schema: public
 remote_relationships:
 - definition:
-    hasura_fields: []
+    hasura_fields:
+    - company_id
     remote_field:
-      company:
-        arguments: {}
+      findFirstCompany:
+        arguments:
+          where:
+            id:
+              equals: $company_id
     remote_schema: CRM
   name: company
 insert_permissions:
