--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "update": "yarn upgrade-interactive && yarn nx migrate latest",
     "workspace-schematic": "yarn nx workspace-schematic",
     "dep-graph": "yarn nx dep-graph",
-    "nexus:generate": "ts-node-dev --transpile-only apps/bridge-api/src/schema --nexus-typegen",
+    "nexus:generate": "node tools/cli/esbuild.cjs && yarn env-cmd -f apps/bridge-api/.env node dist/asdf/bridge-api-nexus.cjs && mv -f dist/asdf/nexus.d.ts apps/bridge-api/src/generated/",
     "bridge:generate": "prisma format && prisma generate && rimraf libs/graphql/crm-mutation && yarn dotenv-flow -p apps/bridge-api pal g && concurrently -n NEXUS,GRAPHQL-CODEGEN -c blue,yellow,green \"yarn nexus:generate\" \"yarn graphql-codegen:cached\"",
     "bridge:prune": "rm -rf apps/bridge-api/src/generated libs/graphql/crm-mutation",
     "postinstall": "patch-package --patch-dir tools/patches && husky install && yarn graphql-codegen:cached"
@@ -200,7 +200,8 @@
     "tslib": "2.2.0",
     "uuid": "8.3.2",
     "wait-on": "5.3.0",
-    "yup": "0.32.9"
+    "yup": "0.32.9",
+    "yup-password": "0.2.1"
   },
   "devDependencies": {
     "@babel/core": "7.13.10",
@@ -257,6 +258,7 @@
     "@typescript-eslint/eslint-plugin": "4.28.0",
     "@typescript-eslint/parser": "4.28.0",
     "@vercel/node": "1.11.1",
+    "apollo-server-integration-testing": "3.0.0",
     "apollo-server-testing": "2.24.0",
     "atob": "2.1.2",
     "babel-jest": "27.0.6",
