--- a/apps/bridge-api/.env
+++ b/apps/bridge-api/.env
@@ -24,3 +24,6 @@ DEBUG_APOLLO=0
 # API key for send grid email service
 SEND_GRID_ACCESS_KEY=
 WEBINAR_JAM_API_KEY=
+
+#legacy JWT secret
+JWT_PAB1_TOKEN=kjsddsbsdbgkhsnldskhmdflkhlgj
